<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haphazard</name>
  <version>0.0.1</version>
  <description>Direct local planner using only twist commands for demonstration of LunarRoverAutonomousNavigation project</description>
  <maintainer email="ada122693@outlook.com">Ada</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
